import { api } from "./api";
import type {
  Dashboard as SharedDashboard,
  FieldConfig,
  WidgetConfig,
  WidgetResult,
  TableConfig,
} from "../../shared/types/dashboard";

export type DashboardWidget = WidgetConfig;

export type InsightWidget = {
  id: string;
  title: string;
  description?: string;
  chartType: "line" | "bar" | "pie" | "table";
  sourceTable: string;
  metric: { op: "sum" | "count" | "avg"; field: string | null };
  groupBy?: { field: string; timeBucket?: "day" | "week" | "month" };
  filter?: Array<{ field: string; op: "=" | "in"; value: any | any[] }>;
  limit?: number;
  editable?: boolean;
  autoGenerated: boolean;
  hidden?: boolean;
};

export type DashboardField = FieldConfig & {
  id?: string;
  name?: string;
  fieldName?: string;
  fieldType?: string;
  description?: string;
  sampleData?: string;
};

export type DashboardTable = Omit<TableConfig, "fields"> & {
  id?: string;
  key?: string;
  purpose?: string;
  actions?: string[];
  kpis?: { label: string; value: string; trend?: string }[];
  recommendedWidgets?: string[];
  fields: DashboardField[];
  sampleRows?: Record<string, any>[];
};

export type RecordReferenceInfo = {
  tableKey: string;
  fieldKey: string;
  count: number;
};

export type DashboardAccessMode = "public" | "restricted" | "private";

export type DashboardRolePermission = {
  role: "Admin" | "Manager" | "Viewer" | string;
  permissions: {
    view: boolean;
    create: boolean;
    edit: boolean;
    delete: boolean;
    manageAccess: boolean;
  };
};

export type DashboardUserAssignment = {
  id: string;
  userId: string;
  fullName: string;
  email: string;
  role: string;
};

export type DashboardAccessPayload = {
  ownerId?: string | null;
  accessMode: DashboardAccessMode;
  rolePermissions: DashboardRolePermission[];
  userAssignments: DashboardUserAssignment[];
};

export type NewFieldDefinition = {
  key: string;
  label: string;
  type: "string" | "number" | "boolean" | "date" | "enum" | "reference";
  required: boolean;
  isUnique?: boolean;
  isReference?: boolean;
  referenceTableKey?: string | null;
  enumOptions?: string[];
  allowEditReference?: boolean;
};

export type TableDefinition = {
  key: string;
  name: string;
  description?: string;
  fields: NewFieldDefinition[];
};

export type Dashboard = Omit<SharedDashboard, "tables"> & {
  id: string;
  userId?: string;
  createdBy?: string | null;
  accessControl?: DashboardAccessPayload | null;
  fields?: DashboardField[];
  tables?: DashboardTable[];
  insights?: InsightWidget[];
  componentCode?: string;
  type?: string;
  createdAt?: string;
  updatedAt?: string;
  relationships?: Array<{
    fromTableKey: string;
    fromFieldKey: string;
    toTableKey: string;
    toFieldKey: string;
    type: string;
  }>;
  ui?: {
    defaultTableKey?: string;
    tableDropdownOrder?: string[];
    emptyStateText?: string;
  };
};

export type GeneratedDashboardStructure = {
  dashboardId: string;
  name: string;
  type?: string;
  description?: string;
  tables: DashboardTable[];
  relationships?: Array<{
    fromTableKey: string;
    fromFieldKey: string;
    toTableKey: string;
    toFieldKey: string;
    type: string;
  }>;
  ui?: {
    defaultTableKey?: string;
    tableDropdownOrder?: string[];
    emptyStateText?: string;
  };
  widgets?: DashboardWidget[];
  componentCode?: string;
};

export type DashboardDataResponse = {
  dashboardId: string;
  widgets: WidgetResult[];
};

export type TableSchemaResponse = {
  table: { key: string; name: string; description?: string };
  fields: DashboardField[];
};

export type PublicDashboardSummary = {
  _id: string;
  name: string;
  userId?: string;
  ownerName?: string;
  description?: string;
  status?: string;
  ui?: Dashboard["ui"];
  widgets?: Dashboard["widgets"];
  tables?: Dashboard["tables"];
  createdAt?: string | null;
  updatedAt?: string | null;
  tablesCount?: number;
  widgetsCount?: number;
  type?: string;
  favoriteCount?: number;
  tags?: string[];
};

export type MetricWidgetConfig = {
  id: string;
  dashboardId?: string;
  source: "auto" | "manual";
  widgetKey?: string;
  tableKey: string;
  columnKey?: string;
  aggregation: "sum" | "avg";
  title: string;
  icon?: "money" | "analytics" | string;
  filter?: Record<string, any>;
};

type InferredSchema = {
  fileName: string;
  fileType: "csv" | "excel";
  tables: Array<{
    name: string;
    columns: Array<{ name: string; inferredType: "number" | "string" | "date" | "boolean" | "mixed" }>;
    numericFields: string[];
    sampleRows: Record<string, any>[];
  }>;
};

const withOwnerParams = (sessionId: string, userId?: string) => {
  const params = new URLSearchParams();
  if (sessionId) params.set("sessionId", sessionId);
  if (userId) params.set("userId", userId);
  return params.toString() ? `?${params.toString()}` : "";
};

export const dashboardApi = {
  generate: (payload: {
    name: string;
    description: string;
    type?: string;
    sessionId: string;
    userId?: string | null;
    fileProvided?: boolean;
    inferredSchema?: InferredSchema;
  }) =>
    api.post<GeneratedDashboardStructure>("/api/dashboards/generate", payload),
  create: (payload: {
    name: string;
    description: string;
    fields: DashboardField[];
    sessionId: string;
    userId?: string | null;
    widgets?: DashboardWidget[];
    tables?: DashboardTable[];
    componentCode?: string;
    type?: string;
  }) => api.post<{ dashboard: Dashboard }>("/api/dashboards", payload),
  list: (sessionId: string, userId?: string | null) =>
    api.get<{ dashboards: Dashboard[] }>(`/api/dashboards${withOwnerParams(sessionId, userId || undefined)}`),
  getById: (id: string, params: { sessionId?: string; userId?: string | null } = {}) => {
    const query = new URLSearchParams();
    if (params.sessionId) query.set("sessionId", params.sessionId);
    if (params.userId) query.set("userId", params.userId);
    const queryString = query.toString() ? `?${query.toString()}` : "";
    return api.get<{ dashboard: Dashboard }>(`/api/dashboards/${id}${queryString}`);
  },
  update: (
    id: string,
    payload: {
      name: string;
      sessionId?: string;
      userId?: string | null;
    },
  ) => api.patch<{ dashboard: Dashboard }>(`/api/dashboards/${id}`, payload),
  delete: (id: string, sessionId: string, userId?: string | null) =>
    api.delete<{ success: boolean }>(`/api/dashboards/${id}${withOwnerParams(sessionId, userId || undefined)}`),
  listRecords: (params: { dashboardId: string; tableKey: string; sessionId?: string; userId?: string | null }) => {
    const query = new URLSearchParams();
    query.set("dashboardId", params.dashboardId);
    query.set("tableKey", params.tableKey);
    if (params.sessionId) query.set("sessionId", params.sessionId);
    if (params.userId) query.set("userId", params.userId);
    return api.get<{ records: Record<string, any>[] }>(`/api/records?${query.toString()}`);
  },
  getRecord: (params: { dashboardId: string; tableKey: string; recordId: string; sessionId?: string; userId?: string | null }) => {
    const query = new URLSearchParams();
    if (params.sessionId) query.set("sessionId", params.sessionId);
    if (params.userId) query.set("userId", params.userId);
    const queryString = query.toString() ? `?${query.toString()}` : "";
    return api.get<{ record: Record<string, any> }>(
      `/api/dashboards/${params.dashboardId}/tables/${params.tableKey}/records/${params.recordId}${queryString}`,
    );
  },
  addRecord: (payload: {
    dashboardId: string;
    tableKey: string;
    record: Record<string, any>;
    sessionId: string;
    userId?: string | null;
  }) =>
    api.post<{ record: { id: string; tableKey: string; record: Record<string, any> } }>(
      `/api/dashboards/${payload.dashboardId}/records`,
      payload,
    ),
  createDashboardRecord: (dashboardId: string, tableKey: string, record: Record<string, any>, sessionId?: string, userId?: string | null) => {
    const query = new URLSearchParams();
    if (sessionId) query.set("sessionId", sessionId);
    if (userId) query.set("userId", userId);
    const queryString = query.toString() ? `?${query.toString()}` : "";
    const body = {
      tableKey,
      table: tableKey,
      record,
      data: record,
    };
    return api.post<{ record: Record<string, any> }>(`/api/dashboards/${dashboardId}/records${queryString}`, body);
  },
  updateDashboardRecord: (
    dashboardId: string,
    tableKey: string,
    recordId: string,
    record: Record<string, any>,
    sessionId?: string,
    userId?: string | null,
  ) => {
    const query = new URLSearchParams();
    if (sessionId) query.set("sessionId", sessionId);
    if (userId) query.set("userId", userId);
    const queryString = query.toString() ? `?${query.toString()}` : "";
    return api.put<{ record: Record<string, any> }>(
      `/api/dashboards/${dashboardId}/tables/${tableKey}/records/${recordId}${queryString}`,
      { record },
    );
  },
  deleteDashboardRecord: (dashboardId: string, tableKey: string, recordId: string, sessionId?: string, userId?: string | null) => {
    const query = new URLSearchParams();
    if (sessionId) query.set("sessionId", sessionId);
    if (userId) query.set("userId", userId);
    const queryString = query.toString() ? `?${query.toString()}` : "";
    return api.delete<{ success: boolean }>(
      `/api/dashboards/${dashboardId}/tables/${tableKey}/records/${recordId}${queryString}`,
    );
  },
  getRecordReferences: (
    dashboardId: string,
    tableKey: string,
    recordId: string,
    params: { sessionId?: string; userId?: string | null } = {},
  ) => {
    const query = new URLSearchParams();
    if (params.sessionId) query.set("sessionId", params.sessionId);
    if (params.userId) query.set("userId", params.userId);
    const queryString = query.toString() ? `?${query.toString()}` : "";
    return api.get<{ references: RecordReferenceInfo[] }>(
      `/api/dashboards/${dashboardId}/records/${tableKey}/${recordId}/references${queryString}`,
    );
  },
  createDashboardTable: async (
    dashboardId: string,
    table: TableDefinition,
    params: { sessionId?: string; userId?: string | null } = {},
  ) => {
    const query = new URLSearchParams();
    if (params.sessionId) query.set("sessionId", params.sessionId);
    if (params.userId) query.set("userId", params.userId);
    const queryString = query.toString() ? `?${query.toString()}` : "";
    const primaryPath = `/api/dashboards/${dashboardId}/tables${queryString}`;
    try {
      return await api.post<{ table: TableDefinition }>(primaryPath, table);
    } catch (err: any) {
      // Fallback for backends that expose /tables/create
      const status = err?.response?.status || err?.status;
      if (status === 404) {
        const fallbackPath = `/api/dashboards/${dashboardId}/tables/create${queryString}`;
        return api.post<{ table: TableDefinition }>(fallbackPath, table);
      }
      throw err;
    }
  },
  getTableSchema: (dashboardId: string, tableKey: string, params: { sessionId?: string; userId?: string | null } = {}) => {
    const query = new URLSearchParams();
    if (params.sessionId) query.set("sessionId", params.sessionId);
    if (params.userId) query.set("userId", params.userId);
    const queryString = query.toString() ? `?${query.toString()}` : "";
    return api.get<TableSchemaResponse>(`/api/dashboards/${dashboardId}/tables/${tableKey}/schema${queryString}`);
  },
  renameTable: (
    dashboardId: string,
    tableKey: string,
    payload: { name: string; sessionId?: string; userId?: string | null },
  ) => {
    const body: Record<string, any> = { name: payload.name };
    if (payload.sessionId) body.sessionId = payload.sessionId;
    if (payload.userId) body.userId = payload.userId;
    return api.patch<{ table: DashboardTable }>(
      `/api/dashboards/${dashboardId}/tables/${tableKey}/rename`,
      body,
    );
  },
  deleteTable: (dashboardId: string, tableKey: string, params: { sessionId?: string; userId?: string | null } = {}) => {
    const query = new URLSearchParams();
    if (params.sessionId) query.set("sessionId", params.sessionId);
    if (params.userId) query.set("userId", params.userId);
    const queryString = query.toString() ? `?${query.toString()}` : "";
    return api.delete<{ success: boolean }>(
      `/api/dashboards/${dashboardId}/tables/${tableKey}${queryString}`,
    );
  },
  updateTableSchema: (
    dashboardId: string,
    tableKey: string,
    body: { fields: DashboardField[] },
    params: { sessionId?: string; userId?: string | null } = {},
  ) => {
    const query = new URLSearchParams();
    if (params.sessionId) query.set("sessionId", params.sessionId);
    if (params.userId) query.set("userId", params.userId);
    const queryString = query.toString() ? `?${query.toString()}` : "";
    return api.put<TableSchemaResponse>(`/api/dashboards/${dashboardId}/tables/${tableKey}/schema${queryString}`, body);
  },
  getReferenceLookups: (
    dashboardId: string,
    tableKey: string,
    params: { keys?: string[] | string; sessionId?: string; userId?: string | null } = {},
  ) => {
    const query = new URLSearchParams();
    if (params.sessionId) query.set("sessionId", params.sessionId);
    if (params.userId) query.set("userId", params.userId);
    const keys = Array.isArray(params.keys)
      ? params.keys.filter((key) => key !== undefined && key !== null && String(key).trim().length > 0)
      : typeof params.keys === "string"
        ? params.keys
            .split(",")
            .map((key) => key.trim())
            .filter((key) => key.length > 0)
        : [];
    if (keys.length) query.set("keys", keys.join(","));
    const queryString = query.toString() ? `?${query.toString()}` : "";
    return api.get<Record<string, Record<string, { id: string; display: string }>>>(
      `/api/dashboards/${dashboardId}/tables/${tableKey}/lookup${queryString}`,
    );
  },
  getDashboardData: (dashboardId: string, params: { sessionId?: string; userId?: string | null; from?: string; to?: string } = {}) => {
    const query = new URLSearchParams();
    if (params.sessionId) query.set("sessionId", params.sessionId);
    if (params.userId) query.set("userId", params.userId);
    if (params.from) query.set("from", params.from);
    if (params.to) query.set("to", params.to);
    return api.get<DashboardDataResponse>(`/api/dashboards/${dashboardId}/data${query.toString() ? `?${query.toString()}` : ""}`);
  },
  listWidgets: (dashboardId: string, params: { sessionId?: string; userId?: string | null } = {}) => {
    const query = new URLSearchParams();
    if (params.sessionId) query.set("sessionId", params.sessionId);
    if (params.userId) query.set("userId", params.userId);
    const queryString = query.toString() ? `?${query.toString()}` : "";
    return api.get<{ widgets: WidgetConfig[] }>(`/api/dashboards/${dashboardId}/widgets${queryString}`);
  },
  createWidget: (
    dashboardId: string,
    body: { tableKey: string; columnKey: string; aggregation: "sum" | "avg"; title: string; icon?: string },
    params: { sessionId?: string; userId?: string | null } = {},
  ) => {
    const query = new URLSearchParams();
    if (params.sessionId) query.set("sessionId", params.sessionId);
    if (params.userId) query.set("userId", params.userId);
    const queryString = query.toString() ? `?${query.toString()}` : "";
    return api.post<{ widget: WidgetConfig }>(`/api/dashboards/${dashboardId}/widgets${queryString}`, body);
  },
  deleteWidget: (dashboardId: string, widgetId: string, params: { sessionId?: string; userId?: string | null } = {}) => {
    const query = new URLSearchParams();
    if (params.sessionId) query.set("sessionId", params.sessionId);
    if (params.userId) query.set("userId", params.userId);
    const queryString = query.toString() ? `?${query.toString()}` : "";
    return api.delete<{ success: boolean }>(`/api/dashboards/${dashboardId}/widgets/${widgetId}${queryString}`);
  },
  getAccessControl: (dashboardId: string, params: { sessionId?: string; userId?: string | null } = {}) => {
    const query = new URLSearchParams();
    if (params.sessionId) query.set("sessionId", params.sessionId);
    if (params.userId) query.set("userId", params.userId);
    const queryString = query.toString() ? `?${query.toString()}` : "";
    return api.get<DashboardAccessPayload>(`/api/dashboards/${dashboardId}/access${queryString}`);
  },
  updateAccessMode: (
    dashboardId: string,
    accessMode: DashboardAccessMode,
    params: { sessionId?: string; userId?: string | null } = {},
  ) => {
    const query = new URLSearchParams();
    if (params.sessionId) query.set("sessionId", params.sessionId);
    if (params.userId) query.set("userId", params.userId);
    const queryString = query.toString() ? `?${query.toString()}` : "";
    return api.patch<DashboardAccessPayload>(`/api/dashboards/${dashboardId}/access-mode${queryString}`, { accessMode });
  },
  updateRolePermissions: (
    dashboardId: string,
    rolePermissions: DashboardRolePermission[],
    params: { sessionId?: string; userId?: string | null } = {},
  ) => {
    const query = new URLSearchParams();
    if (params.sessionId) query.set("sessionId", params.sessionId);
    if (params.userId) query.set("userId", params.userId);
    const queryString = query.toString() ? `?${query.toString()}` : "";
    return api.put<DashboardAccessPayload>(`/api/dashboards/${dashboardId}/access${queryString}`, { rolePermissions });
  },
  searchUsers: (queryStr: string) =>
    api.get<{ users: Array<{ id: string; fullName: string; email: string }> }>(`/api/users?query=${encodeURIComponent(queryStr)}`),
  addUserAssignment: (
    dashboardId: string,
    body: { userId: string; role: string },
    params: { sessionId?: string; userId?: string | null } = {},
  ) => {
    const query = new URLSearchParams();
    if (params.sessionId) query.set("sessionId", params.sessionId);
    if (params.userId) query.set("userId", params.userId);
    const queryString = query.toString() ? `?${query.toString()}` : "";
    return api.post<DashboardAccessPayload>(`/api/dashboards/${dashboardId}/users${queryString}`, body);
  },
  updateUserAssignment: (
    dashboardId: string,
    assignmentId: string,
    body: { role: string },
    params: { sessionId?: string; userId?: string | null } = {},
  ) => {
    const query = new URLSearchParams();
    if (params.sessionId) query.set("sessionId", params.sessionId);
    if (params.userId) query.set("userId", params.userId);
    const queryString = query.toString() ? `?${query.toString()}` : "";
    return api.patch<DashboardAccessPayload>(`/api/dashboards/${dashboardId}/users/${assignmentId}${queryString}`, body);
  },
  removeUserAssignment: (dashboardId: string, assignmentId: string, params: { sessionId?: string; userId?: string | null } = {}) => {
    const query = new URLSearchParams();
    if (params.sessionId) query.set("sessionId", params.sessionId);
    if (params.userId) query.set("userId", params.userId);
    const queryString = query.toString() ? `?${query.toString()}` : "";
    return api.delete<DashboardAccessPayload>(`/api/dashboards/${dashboardId}/users/${assignmentId}${queryString}`);
  },
  listPublicDashboards: () => api.get<PublicDashboardSummary[]>(`/api/dashboards/public`),
  hideWidgetOverride: (
    dashboardId: string,
    body: { widgetKey: string },
    params: { sessionId?: string; userId?: string | null } = {},
  ) => {
    const query = new URLSearchParams();
    if (params.sessionId) query.set("sessionId", params.sessionId);
    if (params.userId) query.set("userId", params.userId);
    const queryString = query.toString() ? `?${query.toString()}` : "";
    return api.post<{ success: boolean }>(`/api/dashboards/${dashboardId}/widget-overrides/hide${queryString}`, body);
  },
  createInsight: (
    dashboardId: string,
    body: Omit<InsightWidget, "id" | "autoGenerated" | "hidden" | "editable"> & { id?: string },
    params: { sessionId?: string; userId?: string | null } = {},
  ) => {
    const query = new URLSearchParams();
    if (params.sessionId) query.set("sessionId", params.sessionId);
    if (params.userId) query.set("userId", params.userId);
    const queryString = query.toString() ? `?${query.toString()}` : "";
    return api.post<{ insight: InsightWidget }>(`/api/dashboards/${dashboardId}/insights${queryString}`, body);
  },
  deleteInsight: (dashboardId: string, insightId: string, params: { sessionId?: string; userId?: string | null } = {}) => {
    const query = new URLSearchParams();
    if (params.sessionId) query.set("sessionId", params.sessionId);
    if (params.userId) query.set("userId", params.userId);
    const queryString = query.toString() ? `?${query.toString()}` : "";
    return api.delete<{ success: boolean }>(`/api/dashboards/${dashboardId}/insights/${insightId}${queryString}`);
  },
  updateInsight: (
    dashboardId: string,
    insightId: string,
    body: Partial<Pick<InsightWidget, "hidden">>,
    params: { sessionId?: string; userId?: string | null } = {},
  ) => {
    const query = new URLSearchParams();
    if (params.sessionId) query.set("sessionId", params.sessionId);
    if (params.userId) query.set("userId", params.userId);
    const queryString = query.toString() ? `?${query.toString()}` : "";
    return api.patch<{ success: boolean }>(`/api/dashboards/${dashboardId}/insights/${insightId}${queryString}`, body);
  },
  useTemplate: (dashboardId: string, token: string) =>
    api.post<{ dashboard: Dashboard }>(`/api/dashboards/${dashboardId}/use-template`, {}, token),
};
